--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
   <body>
   <head>
-  <meta http-equiv="refresh" content="0;url=http://www.jinnian.life">
+  <meta http-equiv="refresh" content="0;url=http://www.zhoudongqi.com">
   </head>
   </body>
